src/main/java/com/example/l/ex2/bad/Duck.java
package com.example.l.ex2.bad;

public class Duck extends Bird{
}
